javaScript gets form table from html. Fixed Spacing. Add pie chart in SPS page.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -103,8 +103,8 @@ form{
 }
 
 
-
 table, td {
 	text-align:center;
-	border: 1px solid gray;
+    border: 1px solid gray;
+    tab-size: 8;
 }
